tests/NormalTests/paczka1/small_fuzzy/27363774.err
Error in line 9: S729 S42 77,3
Error in line 10: S729 S126 1,9
